Add in Fluro Tubes and Illumination Tubes

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -14,6 +14,7 @@ tile.neon_sign_standing.name=Neon Sign
 tile.neon_sign_wall.name=Neon Sign
 tile.flip_flop_torch.name=Flip Flop Torch
 tile.glowstone_torch.name=Glowstone Torch
+tile.illumination_tube.name=Illumination Tube
 tile.tank.name=Tank
 tile.warehouse_crate.name=Warehouse Crate
 tile.obsidian_safe.name=§5Obsidian Safe
@@ -30,6 +31,22 @@ tile.fire_sensor.name=Fire Alarm
 tile.arrow_sensor.name=Arrow Target
 tile.metal_mesh.name=Metal Mesh
 tile.fan.name=Fan
+tile.fluro.white.name=White Fluro Tube
+tile.fluro.orange.name=Orange Fluro Tube
+tile.fluro.magenta.name=Magenta Fluro Tube
+tile.fluro.lightBlue.name=Light Blue Fluro Tube
+tile.fluro.yellow.name=Yellow Fluro Tube
+tile.fluro.lime.name=Lime Fluro Tube
+tile.fluro.pink.name=Pink Fluro Tube
+tile.fluro.gray.name=Gray Fluro Tube
+tile.fluro.silver.name=Silver Fluro Tube
+tile.fluro.cyan.name=Cyan Fluro Tube
+tile.fluro.purple.name=Purple Fluro Tube
+tile.fluro.blue.name=Blue Fluro Tube
+tile.fluro.brown.name=Brown Fluro Tube
+tile.fluro.green.name=Green Fluro Tube
+tile.fluro.red.name=Red Fluro Tube
+tile.fluro.black.name=Black Fluro Tube
 tile.decor_trap_door.name=Trap Door
 tile.decor_door.name=Colorizer Door
 tile.decor_stairs.name=Stairs
@@ -1309,6 +1326,10 @@ grimpack.manual.decor.subsection.deco.page.firing=Uncooked decorations will need
 grimpack.manual.decor.subsection.deco.page.firing.title=Firing Clay
 grimpack.manual.decor.subsection.deco.page.lights=Besides lanterns, light bulbs can be made to feel more modern. They can be controlled by redstone and are placed underneath blocks. When broken you receive glass shards which can be crafted back into glass.
 grimpack.manual.decor.subsection.deco.page.lights.title=Light Bulbs
+grimpack.manual.decor.subsection.deco.page.fluro=Fluro tubes are fluorescent blocks that give off a strong light and are available in one of the 16 Minecraft colors.
+grimpack.manual.decor.subsection.deco.page.fluro.title=Fluro Tubes
+grimpack.manual.decor.subsection.deco.page.illumination_tube=Illumination tubes are another bright light source similar to torches except they can be placed on any side of a block and are nice and sleek.
+grimpack.manual.decor.subsection.deco.page.illumination_tube.title=Illumination Tubes
 #End Decorations
 
 #Start introduction
