Fix cascading generation for other Generation. All cascading problems should now be fixed.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -867,6 +867,10 @@ grimpack.world.cfg.fungus=Fungus Options
 grimpack.world.cfg.fungus.tooltip=Options all about fungus
 grimpack.world.cfg.floatingIslands=Floating Islands Options
 grimpack.world.cfg.floatingIslands.tooltip=Options all about floating islands
+grimpack.world.cfg.world-gen=World Gen Expanded Options
+grimpack.world.cfg.world-gen.tooltip=Options to modify World Gen Expansion frequencies for generation
+grimpack.world.cfg.ruins=Ruin Options
+grimpack.world.cfg.ruins.tooltip=Options to modify spawn rates and other options about ruins
 Generate Randomite.tooltip=Should randomite be generated
 Generate Gunpowder Reeds.tooltip=Should gunpowder reeds be generated
 Enable Fire.tooltip=Can corruption blocks spawn fire on top
@@ -1053,6 +1057,7 @@ grimpack.jer.dungeon.desert_level15=Level 15 Desert Well
 grimpack.jer.dungeon.desert_level20=Level 20 Desert Well
 grimpack.jer.dungeon.desert_level25=Level 25 Desert Well
 grimpack.jer.dungeon.desert_level30=Level 30 Desert Well
+grimpack.jer.dungeon.fountain=Fountain
 
 grimtools.slingshot.random=Random
 grimtools.slingshot.all=In Order
