--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1852,6 +1852,11 @@ grimpack.manual.world.subsection.8bit.page.parabuzzy=This creature hovers above 
 grimpack.manual.world.subsection.8bit.page.parabuzzy.title=Parabuzzy
 grimpack.manual.world.subsection.8bit.page.bobomb=Using this item you can create a Bob-omb these guys will give their lives to save you from harm. Just be careful that you aren't in the blast radius. These guys can also be placed on your head.
 grimpack.manual.world.subsection.8bit.page.bobomb.title=Bob-omb
+grimpack.manual.world.subsection.ruins=Ruins
+grimpack.manual.world.subsection.ruins.page.runes=Runes are magical blocks that bestow the players with 'powers'. They are fairly rare and can only be found in ruins.
+grimpack.manual.world.subsection.ruins.page.runes.title=Runes
+grimpack.manual.world.subsection.ruins.page.fountains=Fountains can be large structures that generate in the water. They can contain spawners and rare loot.
+grimpack.manual.world.subsection.ruins.page.fountains.title=Fountains
 
 #Help Messages
 help.build.key1=FULL box
