Add in Rune Info page

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1883,6 +1883,8 @@ grimpack.manual.world.subsection.8bit.page.bobomb.title=Bob-omb
 grimpack.manual.world.subsection.ruins=Ruins
 grimpack.manual.world.subsection.ruins.page.runes=Runes are magical blocks that bestow the players with 'powers'. They are fairly rare and can only be found in ruins.
 grimpack.manual.world.subsection.ruins.page.runes.title=Runes
+grimpack.manual.world.subsection.ruins.page.rune_info=Each rune can bestow the player with a certain effect. Below are the effects for the currently discovered 16 Rune types. Runes can be divided into two groups based on if there effect is a positive or negative (usually).<br>§l§nPositives:§r §3UR§r - Strength, §3HAGEL§r - Jump Boost, §3EOLH§r - Resistance, §3CEN§r - Fire Resistance, §3GER§r - Haste, §3RAD§r - Speed, §3BEORC§r - Regeneration, §3LAGU§r - Water Breathing, §3ODAL§r - Night Vision<br>§l§nNegatives:§r §dEOH§r - Poison, §dIS§r - Slowness, §dDAEG§r - Instant Health, §dTYR§r - Nausea, §dNYD§r - Hunger, §dTHORN§r - Weakness, §dOS§r - Blindness
+grimpack.manual.world.subsection.ruins.page.rune_info.title=Rune Effects
 grimpack.manual.world.subsection.ruins.page.fountains=Fountains can be large structures that generate in the water. They can contain spawners and rare loot.
 grimpack.manual.world.subsection.ruins.page.fountains.title=Fountains
 grimpack.manual.world.subsection.ruins.page.pyramids=Pyramids are large structures that have started to decay over the years. Most have many levels but can be very rewarding.
