Add in Cage info about Pokeballs

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -1349,7 +1349,7 @@ grimpack.manual.decor.subsection.lamps.page.recipes.title=Recipes
 
 #Start Decorations
 grimpack.manual.decor.subsection.deco=Decoration
-grimpack.manual.decor.subsection.deco.page.cage=Cages and chains to give off a dark or even evil feel.
+grimpack.manual.decor.subsection.deco.page.cage=Cages and chains to give off a dark or even evil feel. If you have a caught Pokeball you can place it in the cage to display your catch.
 grimpack.manual.decor.subsection.deco.page.cage.title=Cages
 grimpack.manual.decor.subsection.deco.page.lantern=If you ever found torches a bit bland then lanterns will come in handy. These include bone, iron, and paper lanterns.
 grimpack.manual.decor.subsection.deco.page.lantern.title=Lanterns
