Magic crystals work... From 1 month ago.

--- a/src/main/resources/assets/grimpack/lang/en_US.lang
+++ b/src/main/resources/assets/grimpack/lang/en_US.lang
@@ -522,6 +522,20 @@ item.advanced_empty_energy_canister.name=Empty Advanced Canister
 item.advanced_energy_canister.name=Advanced Energy Canister
 item.advanced_ray_gun.name=Advanced Raygun
 item.dark_iron_ingot.name=Dark Iron Ingot
+item.gem.ruby.name=Ruby Gem
+item.gem.sapphire.name=Sapphire Gem
+item.gem.emerald.name=Emerald Gem
+item.gem.amethyst.name=Amethyst Gem
+item.gem.citrine.name=Citrine Gem
+item.gem.soulgem.name=Soulgem Gem
+item.gem.necris.name=Necris Gem
+item.shard.ruby.name=Ruby Shard
+item.shard.sapphire.name=Sapphire Shard
+item.shard.emerald.name=Emerald Shard
+item.shard.amethyst.name=Amethyst Shard
+item.shard.citrine.name=Citrine Shard
+item.shard.soulgem.name=Soulgem Shard
+item.shard.necris.name=Necris Shard
 item.sling_shot.name=Slingshot
 item.sling_pellet.stone.name=Stone Pellet
 item.sling_pellet.iron.name=Iron Pellet
